Use JavaScript to toggle ms-auto bootstrap class to fix nav dropdown on smaller screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -268,7 +268,13 @@ html, body {
         text-align: center;
     }
 
+    .ms-auto {
+        text-align: center;
+    }
+
     footer .text-center {
         margin-bottom: 15px;
     }
 }
+
+
